@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2273] add support of macro {TRIGGER.EVENTS.UNACK} for map labels (Vedmak)
  - [ZBX-2279] fixed error when changing graph name case (Vedmak)
  - [ZBX-2252] fixed server crash and infinite looping in telnet checks (asaveljevs)
  - [ZBX-2275] fixed loss of the log-data if Zabbix server is unavailable (Sasha)
